objects/LLC_BI__Review__c.object
<CustomObject>
    <description>The Review object is used to track details of the review process for the relationships/ loans in nCino.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is available on the Account review record page. This is a Lookup that is automatically populated to the Account that the review was started from. It links the review record to the account. This is NOT available or needed on the Product Package review record page, because that review could be more multiple relationships and loans associated to the Product Package</description>
        <inlineHelpText>Lookup to the Account that is involved in the review.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is optional and is used to look up the credit memo record that is associated to the review record. If a credit memo is configured for reviews, this field is automatically populated once a credit memo is generated.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Lookup_Key__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Narrative__c</fullName>
        <description>This rich text field is optional and manually populated. It is used for the financial institution user to specify details and additional information about the review.</description>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package_Data__c</fullName>
        <description>This field is not customer facing and lives behind the scenes. It stores the JSON serialized sObject of the product package or the account in review.</description>
        <label>Product Package Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used only on the product package review record layout. And will be used only when the Financial Institution is initiating reviews from the Product Package. This field is a lookup to the product package the review record was initiated from and automatically populated.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Type__c</fullName>
        <description>The picklist Is manually selected and optional. It  is used to specify the type of the Review being performed.(i.e. annual, monthly, adhoc, early warning, etc.) Configuration options would allow a financial institution to require this field and then write workflow or approval processes using the input from this field.</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Semi-Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>AdHoc</fullName>
                </value>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Early Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is automatically populated and  is used to specify the status of the review. The review status field will be populated with &quot;in progress&quot; when a review record is initiated. Through configuration of approval processes, the review will be automatically placed as complete when an approval process is complete and approved. Or, this field can be manually updated to complete if there is no configuration to automate the status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_Complete</fullName>
        <active>true</active>
        <description>Account Review Complete</description>
        <label>Account Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Account_Review_In_Progress</fullName>
        <active>true</active>
        <description>Account Review In Progress</description>
        <label>Account Review In Progress</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_Complete</fullName>
        <active>true</active>
        <description>Package Review Complete</description>
        <label>Package Review Complete</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Package_Review_In_Progress</fullName>
        <active>true</active>
        <description>Package Review In Progress</description>
        <label>Package Review In Progress</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>